--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,9 @@
     <title>Odigeo front challenge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="bundle.js"></script>
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark static-top header-bg">
         <div class="container">
             <a class="navbar-brand" href="#">ODIGEO TECH CHALLENGE</a>
@@ -27,13 +25,19 @@
         </div>
     </nav>
 
-    <div class="container">
+    <!--<div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1 class="mt-5">Itineraries</h1>
             </div>
         </div>
-    </div>
+    </div>-->
+
+
+    <!-- Our React component page -->
+    <div id="root"></div>
+
+    <script src="bundle.js"></script>
 </body>
 
 </html>
